--- a/templates/questionview.html
+++ b/templates/questionview.html
@@ -4,10 +4,10 @@
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-        <h1>Choose your category</h1>
-        <p>{{categoryList}}</p>
-        <form method = "post" action = "/questionview">
-            <input type="text" name="category" placeholder="Enter your category"/>
+        <h1>Type your answer</h1>
+        <p>{{question}}</p>
+        <form method = "post" action = "/answerview">
+            <input type="text" name="answer" placeholder="Enter your answer"/>
             <input type="submit" value="Submit"/>
         </form>
     </body>
